# two_tier_document_parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  GIT_SUBMODULES.md  IMPROVEMENTS.md  LICENSE  Makefile  NOTICE  PARSING_PLAN.md  PRODUCTION_READY_SUMMARY.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  notebook_requirements.txt  parser_visualization.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
accurate/: .dockerignore  Dockerfile  app.py  magic-pdf.json  models.py  parser.py  requirements.txt
deploy/: Dockerfile.accurate  Dockerfile.accurate.prod  Dockerfile.fast  Dockerfile.fast.prod  docker-compose.yml  entrypoint-accurate.sh  magic-pdf.json
docs/: API.md  DOCKER_SETUP.md  README.md  SETUP_GUIDE.md  TESTING.md
examples/: demo_client.py
fast/: Dockerfile  app.py  parser.py  requirements.txt
models/: MODELS_USED.yaml
scripts/: check_docker.py
src/two_tier_parser/accurate/: app.py  models.py  requirements.txt  service.py
src/two_tier_parser/common/: config.py  logger.py
src/two_tier_parser/fast/: app.py  models.py  requirements.txt  service.py
tests/: conftest.py  test_models.py
tests/integration/: test_api.py
tests/unit/: test_accurate_parser.py  test_fast_parser.py
